--- a/style.css
+++ b/style.css
@@ -9,6 +9,26 @@ body {
   margin: 0;
 }
 
+nav {
+  width: 100%;
+  height: 10vh;
+  background: #6f4a8e;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 100%;
+  width: 30%;
+}
+
+a {
+  text-decoration: none;
+  color: whitesmoke;
+}
+
 .container {
   margin: auto;
   max-width: 800px;
