--- a/style.css
+++ b/style.css
@@ -80,6 +80,10 @@ i {
   color: #ebebeb;
 }
 
+#result-heading {
+  margin-top: 30px;
+}
+
 .meals {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
